--- a/requirements.dev.txt
+++ b/requirements.dev.txt
@@ -1,5 +1,5 @@
-mypy~=1.10.0
-black~=24.4.2
-isort~=5.13.2
+ruff~=0.4.4
+jupyter~=1.0.0
 pytest~=7.4.4
-scikit-learn~=1.5.1
+mypy~=1.10.0
+ipykernel~=6.29.4
