--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -11,9 +11,10 @@ jobs:
         with:
           python-version: 3.12.4
           cache: "pip"
+      - name: "Install Poetry"
+        run: pipx install poetry
       - name: "Install dependencies"
-        run: |
-          pip install -r requirements.txt -r requirements.dev.txt
+        run: poetry install
       - name: "Ruff checks"
         continue-on-error: true
         run: ruff check . --output-format=full --diff
