fix: update dependencies and add new packages in poetry.lock and pyproject.toml; adjust PYTHONPATH in CI workflow

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -25,4 +25,4 @@ jobs:
         continue-on-error: true
         run: poetry run mypy
       - name: "Pytest"
-        run: poetry run pytest -v -m ci
+        run: PYTHONPATH=. poetry run pytest -v -m ci
