--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ no_implicit_optional = "False"
 testpaths = ["tests"]
 addopts = ["--color=yes", "-s"]
 markers = ["ci: test that run on ci"]
+pythonpath = ["src"]
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.4"
@@ -68,3 +69,9 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.12"
+numpy = "^1.26.4"
+scipy = "^1.13.1"
+sympy = "^1.13.1"
+matplotlib = "^3.8.4"
+mpmath = "^1.3.0"
+scikit-learn = ">=1.0.0"
